k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-app
  labels:
    app: customer-app
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: customer-app
